fixed alignment

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ pre, #nav {
 
 pre {
   position: absolute;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
